# anyFAST

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/simplified-workflow/: design.md  requirements.md  tasks.md
rust/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
rust/scripts/: setup-macos-helper.sh  uninstall-macos-helper.sh  windows-hosts-fallback.ps1
rust/src/: App.test.tsx  App.tsx  index.css
rust/src-tauri/: Cargo.toml  Entitlements.plist  app.manifest  build.rs  tauri.conf.json
rust/src-tauri/binaries/: README.md
rust/src-tauri/capabilities/: default.json
rust/src-tauri/nsis/: hooks.nsi  installer.nsh
rust/src-tauri/src/: config.rs  endpoint_tester.rs  health_checker.rs  history.rs  hosts_manager.rs  hosts_ops.rs  lib.rs  main.rs  models.rs
rust/src-tauri/src/client/: mod.rs  pipe_client.rs
rust/src-tauri/src/service/: mod.rs  pipe_server.rs  rpc.rs
rust/src/components/: Dashboard.test.tsx  Dashboard.tsx  HistoryView.tsx  ImportEndpointsDialog.tsx  Logs.test.tsx  Logs.tsx  Settings.test.tsx  Settings.tsx  Sidebar.test.tsx  Sidebar.tsx  Toast.tsx  ToggleButton.property.test.tsx  ToggleButton.test.tsx  WorkingIndicator.property.test.tsx  index.ts
rust/src/test/: setup.ts
rust/src/test/mocks/: tauri.ts
rust/src/types/: index.ts
scripts/: release.sh
