[package]
name = "anyfast"
version = "1.0.0"
description = "anyFAST - 中转站端点优选工具"
authors = ["hudawang"]
edition = "2021"

[lib]
name = "anyfast_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki-roots = "0.26"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
directories = "5"
thiserror = "2"
chrono = "0.4"
fs2 = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
