[package]
name = "anyfast"
version = "2.2.0"
description = "anyFAST - 中转站端点优选工具"
authors = ["hudawang"]
edition = "2021"
default-run = "anyfast"

[lib]
name = "anyfast_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Main Tauri application
[[bin]]
name = "anyfast"
path = "src/main.rs"

# Service 可执行文件 (Windows)
[[bin]]
name = "anyfast-service"
path = "src/bin/anyfast-service.rs"

# macOS Privilege Helper (setuid binary)
[[bin]]
name = "anyfast-helper-macos"
path = "src/bin/anyfast-helper-macos.rs"

[features]
default = ["tauri-runtime"]
tauri-runtime = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-plugin-process", "dep:tauri-plugin-updater"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "0.26"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "socks"] }
directories = "5"
thiserror = "2"
chrono = "0.4"
fs2 = "0.4"
regex-lite = "0.1"
url = "2"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }
windows-service = "0.7"
winreg = "0.52"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
